--- a/isocpp/inline_op_states.org
+++ b/isocpp/inline_op_states.org
@@ -1889,10 +1889,11 @@ start(get-data(self).op-state);</ins></pre>
 Modify [exec.then] p4 as follows:
 
 #+BEGIN_EXPORT html
-<div class="wording">
-For then, upon_error, and upon_stopped, let <expos>set-cpo</expos> be set_value, set_error,
-and set_stopped, respectively. The exposition-only class template
-<del><expos>impls-for</expos></del><ins><expos>basic-operation</expos></ins> (33.9.1) is specialized for <expos>then-cpo</expos> as follows:
+<div class="wording" style="counter-set: paragraph 3">
+<p class="numbered">
+For <code>then</code>, <code>upon_error</code>, and <code>upon_stopped</code>, let <code><expos>set-cpo</expos></code> be <code>set_value</code>, <code>set_error</code>,
+and <code>set_stopped</code>, respectively. The exposition-only class template
+<code><expos><del>impls-for</del><ins>basic-operation</ins></expos></code> (33.9.1) is specialized for <code><expos>then-cpo</expos></code> as follows:
 
 <pre>namespace std::execution {
 
@@ -1911,7 +1912,7 @@ struct <expos>impls-for</expos>&lt;<expos>decayed-typeof</expos>&lt;<expos>then-
 };</del>
 
 <ins>template &lt;class Rcvr, class Data, class Child&gt;
-struct <expos>basic-operation</expos>&lt;<expos>then-cpo</expos>, Rcvr, Data, Child&gt;
+struct <expos>basic-operation</expos>&lt;<expos>then-cpo</expos>, Rcvr, Data, Child&gt;   <expos>// exposition only</expos>
   : <expos>default-state-impls</expos>
   , inlinable_operation_state&lt;<expos>basic-operation</expos>&lt;<expos>then-cpo</expos>, Rcvr, Data, Child&gt;, Rcvr&gt;
   , <expos>manual-child-operation</expos>&lt;
@@ -1920,39 +1921,38 @@ struct <expos>basic-operation</expos>&lt;<expos>then-cpo</expos>, Rcvr, Data, Ch
       env_of_t&lt;Rcvr&gt;,
       Child&gt; {
 
-  using <expos>child-op-t</expos> = <expos>manual-child-operation</expos>&lt; // <expos>exposition only</expos>
+  using <expos>child-op-t</expos> = <expos>manual-child-operation</expos>&lt; <expos>// exposition only</expos>
       <expos>basic_operation</expos>,
       <expos>indexed-tag</expos>&lt;0&gt;,
       env_of_t&lt;Rcvr&gt;,
       Child&gt;;
 
-  using <expos>func-t</expos> = decay_t&lt;Data&gt;; // <expos>exposition only</expos>
-  [[no_unique_address]] <expos>func-t</expos> <expos>func</expos>; // <expos>exposition only</expos>
+  using <expos>func-t</expos> = decay_t&lt;Data&gt;; <expos>// exposition only</expos>
+  <expos>func-t</expos> <expos>func</expos>;    <expos>// exposition only</expos>
 
-  <expos>basic-operation</expos>(Rcvr r, Data&& data, Child&& child)
-    noexcept(<expos>child-op-t</expos>::<expos>is-nothrow-connectable</expos> && is_nothrow_constructible_v&lt;decay_t&lt;Data&gt;, Data&gt;)
-    : inlinable_operation_state<<expos>basic-operation</expos>, Rcvr>(std::move(r))
+  <expos>basic-operation</expos>(Rcvr r, Data&& data, Child&& child)  <expos>// exposition only</expos>
+    noexcept(<expos>child-op-t</expos>::<expos>is-nothrow-connectable</expos> &amp;&amp;
+             is_nothrow_constructible_v&lt;decay_t&lt;Data&gt;, Data&gt;)
+    : inlinable_operation_state&lt;<expos>basic-operation</expos>, Rcvr&gt;(std::move(r))
     , <expos>func</expos>(std::forward&lt;Data&gt;(data)) {
-     <expos>child-op-t</expos>::<expos>construct</expos>(std::forward&lt;Child&gt;(child));
+    <expos>child-op-t</expos>::<expos>construct</expos>(std::forward&lt;Child&gt;(child));
   }
 
   ~<expos>basic-operation</expos>() {
-    <expos>child-op-t</expos>::_destruct();
+    <expos>child-op-t</expos>::<expos>destruct</expos>();
   }
 
   void start() & noexcept {
-    <expos>child-op-t</expos>::_start();
+    <expos>child-op-t</expos>::<expos>start-child</expos>();
   }
 
-  template &lt;class Self, size_t Id, class Tag, class... Args&gt;
-  void <expos>complete</expos>(this Self& self, <expos>indexed-tag</expos>&lt;Id&gt;,
-      Tag, Args&&... args) noexcept {
+  template &lt;class Self, class Tag, class... Args&gt;
+  void <expos>complete</expos>(this Self& self, <expos>indexed-tag</expos>&lt;0&gt;, Tag, Args&&... args) noexcept {  <expos>// exposition only</expos>
+    decltype(auto) rcvr = self.<expos>get-receiver</expos>();
     if constexpr (same_as&lt;Tag, <expos>set-cpo</expos>&gt;) {
-      TRY-SET-VALUE(self.get_receiver(),
-        invoke(self.<expos>func</expos>, std::forward&lt;Args&gt;(args)...));
+      <expos>TRY-SET-VALUE</expos>(rcvr, invoke(std::move(self.<expos>func</expos>), std::forward&lt;Args&gt;(args)...));
     } else {
-      return Tag{}(
-          std::move(self.get_receiver()), std::forward&lt;Datums&gt;(args)...);
+      return Tag{}(std::move(rcvr), std::forward&lt;Args&gt;(args)...);
     }
   }
 };</ins>
@@ -1960,23 +1960,6 @@ struct <expos>basic-operation</expos>&lt;<expos>then-cpo</expos>, Rcvr, Data, Ch
 }</pre>
 </div>
 #+END_EXPORT
-
-Insert the following paragraph between [exec.then] p4 and p5:
-
-#+BEGIN_EXPORT html
-<div class="wording">
-<ins>The exposition-only class template
-<expos>sender-impls-for</expos> (33.9.1) is specialized for <expos>then-cpo</expos> as follows:</ins>
-
-<pre><ins>template&lt;&gt;
-struct <expos>sender-impls-for</expos>&lt;<expos>then-cpo</expos>&gt; : <expos>default-sender-impls</expos> {
-  template&lt;class Sender, class Env&gt;
-  using <expos>completion-signatures-of-t</expos>
-    = <expos>completion-signatures-for</expos>&lt;Sender, Env&gt;;
-};</ins></pre>
-</div>
-#+END_EXPORT
-
 
 ** Changes to /~let_value~/, /~let_error~/, /~let_stopped~/
 
